--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
+
 body{ 
     background-color: black;
     color: white;
+    width: 100%;
 }
 
 p{
@@ -21,10 +23,9 @@ p{
     display: flex;
     justify-content: center;
     padding-bottom: 50px;
-    padding-left: 150px;
-
-
+    padding-left: 150px
 }
+
 .titulo{
     font-family: Arial, sans-serif;
 }
@@ -32,20 +33,19 @@ p{
 .perfis-container{
     display: flex;
     justify-content: center
-    
 }
 
 .perfis {
     display: flex;
     list-style: none;
     display: flex;
-    width: 700px;
+    width: 700px
 }
 
 
 .usuario {
-width: 160px;
-padding: 15px;
+    width: 160px;
+    padding: 15px;
 }
 
 .nome{
@@ -55,11 +55,13 @@ padding: 15px;
 .imagens{
     border-radius: 10px;
     align-content: center;
+    
 }
 
 .imagens:hover{
-    border: 1px white solid;
+    border: none;
     transform: scale(1.1);
+
 }
 
 
@@ -72,6 +74,7 @@ padding: 15px;
     margin-top: 16px;
     border-radius: 10px;
     margin-left: 15px;
+    width: 100%;
 }
 
 .imagen-add{
@@ -82,13 +85,13 @@ padding: 15px;
     background-color: rgb(104, 104, 104);
     transform: scale(1.1);
     border: 1px black;
+    max-width: 100%;
 }
 
 
 .nome-add{
     padding-top: 10px;
     padding-left: 20px;
-
 }
 
 .container-botao{
@@ -99,13 +102,14 @@ padding: 15px;
 }
 
 .botao{
-   background-color: black;
-   color: white; 
-   border: 1px solid white;
-   padding: 15px 50px 15px 50px;
-   border-radius: 10px;
-   font-size: 20px;
+    background-color: black;
+    color: white; 
+    border: 1px solid white;
+    padding: 15px 50px 15px 50px;
+    border-radius: 10px;
+    font-size: 20px;
 }
+
 .botao:hover {
     background-color: rgb(255, 255, 255);
     color: black;
